--- a/build.xml
+++ b/build.xml
@@ -1,24 +1,39 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project name="web-project" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
-    <property file="application.properties"/>
+<project name="weblab-3" default="build" xmlns:ivy="antlib:org.apache.ivy.ant">
+
+    <loadproperties srcfile="ant.properties"/>
+
+    <path id="application" location="${build.dir}/${ant.project.name}.jar"/>
 
     <target name="resolve" description="resolve dependencies">
-        <ivy:settings/>
-        <ivy:cachepath pathid="dependency"/>
+        <ivy:resolve/>
+        <ivy:cachepath pathid="dependency2"/>
     </target>
 
-    <target name="compile">
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+    </target>
+
+    <target name="prepare" depends="clean">
+        <delete dir="${build.dir}"/>
         <mkdir dir="${build.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${build.dir}"/>
+        <mkdir dir="${classes.dir}"/>
+    </target>
+
+    <target name="compile" depends="prepare, resolve">
+        <javac srcdir="${src.dir}"
+               destdir="${classes.dir}">
+            <classpath refid="dependency2"/>
+        </javac>
+        <copy todir="${classes.dir}">
+            <fileset dir="${src.dir}" excludes="**/*.java"/>
+        </copy>
     </target>
 
     <target name="build" depends="compile">
-        <mkdir dir="${dist.dir}"/>
-        <jar destfile="${dist.dir}/${ant.project.name}-${project.version}.jar" basedir="${build.dir}">
+        <jar destfile="${build.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="${main.class}"/>
+                <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
         </jar>
     </target>
-
 </project>
