--- a/ivy.xml
+++ b/ivy.xml
@@ -7,28 +7,15 @@
             status="integration">
     </info>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency org="com.google.code.gson" name="gson" rev="2.9.1"/>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency org="org.slf4j" name="slf4j-simple" rev="2.0.2"/>
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency org="org.projectlombok" name="lombok" rev="1.18.24"/>
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api &ndash;&gt;-->
-        <!--        <dependency org="javax.servlet" name="javax.servlet-api" rev="4.0.1"/>-->
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.ejb/javax.ejb-api &ndash;&gt;-->
-        <!--        <dependency org="javax.ejb" name="javax.ejb-api" rev="3.2.2"/>-->
-        <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
-        <dependency org="jakarta.servlet" name="jakarta.servlet-api" rev="6.0.0"/>
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
         <dependency org="org.junit.jupiter" name="junit-jupiter" rev="5.9.3"/>
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency org="junit" name="junit" rev="4.13.2"/>
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-        <!--        <dependency org="org.mockito" name="mockito-core" rev="4.8.1"/>-->
-        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency org="org.testng" name="testng" rev="6.13.1"/>
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
         <dependency org="org.mockito" name="mockito-all" rev="2.0.2-beta"/>
+        <dependency org="org.hibernate" name="hibernate-core" rev="6.1.4.Final"/>
+        <dependency org="javax.persistence" name="javax.persistence-api" rev="2.2"/>
 
     </dependencies>
 </ivy-module>
