--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="weblab-3" default="build" xmlns:ivy="antlib:org.apache.ivy.ant">
 
-    <loadproperties srcfile="ant.properties"/>
+    <loadproperties srcfile="application.properties"/>
 
     <path id="application" location="${build.dir}/${ant.project.name}.jar"/>
 
@@ -13,20 +13,13 @@
         <delete dir="${build.dir}"/>
     </target>
 
-    <target name="prepare" depends="clean">
-        <delete dir="${build.dir}"/>
+    <target name="compile" depends="resolve">
         <mkdir dir="${build.dir}"/>
+        <delete dir="${build.dir}"/>
         <mkdir dir="${classes.dir}"/>
-    </target>
-
-    <target name="compile" depends="prepare, resolve">
-        <javac srcdir="${src.dir}"
-               destdir="${classes.dir}">
+        <javac srcdir="${src.dir}" destdir="${classes.dir}">
             <classpath refid="dependency2"/>
         </javac>
-        <copy todir="${classes.dir}">
-            <fileset dir="${src.dir}" excludes="**/*.java"/>
-        </copy>
     </target>
 
     <target name="build" depends="compile">
@@ -35,5 +28,20 @@
                 <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
         </jar>
+    </target>
+
+    <target name="test" depends="build">
+        <junit printsummary="on">
+            <classpath>
+                <pathelement location="${dist.dir}/${ant.project.name}-${project.version}.jar"/>
+                <path refid="dependency2"/>
+            </classpath>
+            <formatter type="xml"/>
+            <batchtest>
+                <fileset dir="${test.dir}">
+                    <include name="**/*Test*.java"/>
+                </fileset>
+            </batchtest>
+        </junit>
     </target>
 </project>
